--- a/myworld/index.css
+++ b/myworld/index.css
@@ -50,14 +50,45 @@
   width: 100%;
   height: 100%;
   background-color: #ffffff;
-  border: 1px solid #eeeeee;
+  border: 1px solid gray;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px 30px;
+}
+
+.left_body_header {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.left_header_gray {
+  width: 148px;
+  height: 133px;
+  background-color: #c4c4c4;
+}
+
+.left_header_line {
+  border-top: 1px dotted black;
+  margin: 12px 0px 12px 0px;
+}
+
+.left_profile {
+  width: 65px;
+  height: 72px;
+}
+
+.left_body_footer {
+  width: 140px;
+  height: 41px;
 }
 
 .wrapper_right {
   background-color: #ffffff;
   width: 524px;
   height: 472px;
-  border: 1px solid #eeeeee;
+  border: 1px solid gray;
   border-radius: 10px;
 }
