--- a/myworld/index.css
+++ b/myworld/index.css
@@ -30,6 +30,7 @@
   height: 472px;
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
 }
 
 .left_header {
@@ -48,7 +49,7 @@
 
 .left_body {
   width: 100%;
-  height: 100%;
+  height: 445px;
   background-color: #ffffff;
   border: 1px solid gray;
   border-radius: 10px;
@@ -60,8 +61,6 @@
 
 .left_body_header {
   width: 100%;
-  display: flex;
-  flex-direction: column;
 }
 
 .left_header_gray {
@@ -76,19 +75,77 @@
 }
 
 .left_profile {
-  width: 65px;
-  height: 72px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
-
+.profile_detail {
+  font-size: 14px;
+}
 .left_body_footer {
-  width: 140px;
-  height: 41px;
+  width: 100%;
+  height: 40%;
 }
-
+.footer_feel {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.footer_title {
+  color: gray;
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+.footer_emoji {
+  outline: none;
+}
 .wrapper_right {
-  background-color: #ffffff;
   width: 524px;
   height: 472px;
+  display: flex;
+  flex-direction: column;
+  padding-left: 5px;
+}
+
+.right_header {
+  width: 510px;
+  height: 30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding: 0px 14px;
+}
+
+.right_header_title {
+  font-size: 16px;
+  color: darkgray;
+  padding-left: 5px;
+  padding-bottom: 5px;
+}
+
+.right_header_setting {
+  font-size: 12px;
+  color: #55b2d4;
+
+  border: none;
+  cursor: pointer;
+}
+
+.right_body {
+  background-color: #ffffff;
+  width: 510px;
+  height: 445px;
   border: 1px solid gray;
   border-radius: 10px;
+}
+
+iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
 }
