--- a/myworld/home/home.css
+++ b/myworld/home/home.css
@@ -58,7 +58,7 @@ body {
   justify-content: space-between;
 }
 
-.body_contents {
+.body_photos {
   width: 100%;
   height: 240px;
   background-color: #c4c4c4;
