--- a/myworld/index.css
+++ b/myworld/index.css
@@ -13,21 +13,36 @@
 .outerbox {
   width: 808px;
   height: 544px;
-  background-image: url("./imeges/outerbox.jpg");
+  background-color: #55b2d4;
   border: 1px solid black;
   border-radius: 10px;
+  padding: 20px 0px 0px 20px;
+}
+
+.outerLine {
+  border: 2px dashed white;
+  width: 768px;
+  height: 508px;
+  border-radius: 10px;
+}
+
+.outerWapper {
+  width: 756px;
+  height: 496px;
+  background-color: #eeeeee;
+  border-radius: 10px;
+  margin: 4px 0px 0px 4px;
+  padding: 12px 0px 0px 12px;
 }
 
 .wrapper {
   display: flex;
   flex-direction: row;
-
-  padding: 32px 0px 0px 32px;
 }
 
 .wrapper_left {
-  width: 208px;
-  height: 472px;
+  width: 218px;
+  height: 476px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -104,8 +119,8 @@
   outline: none;
 }
 .wrapper_right {
-  width: 524px;
-  height: 472px;
+  width: 534px;
+  height: 476px;
   display: flex;
   flex-direction: column;
   padding-left: 5px;
