feat: 끝말잇기 html 구조 생성
feat: 끝말잇기 html 구조 생성

--- a/myworld/home/home.css
+++ b/myworld/home/home.css
@@ -24,7 +24,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
 }
-.contents_title {
+.home_contents_title {
   display: flex;
   flex-direction: row;
   align-items: center;
