--- a/myworld/game/game.css
+++ b/myworld/game/game.css
@@ -64,6 +64,11 @@ body {
   justify-content: space-around;
 }
 
+.word_span {
+  color: #55b2d4;
+  font-weight: 700;
+}
+
 .word_input {
   width: 138px;
   height: 24px;
@@ -79,6 +84,8 @@ body {
   border: 1px solid gray;
   border-radius: 5px;
   cursor: pointer;
+  background-color: #ffffff;
+  line-height: 10px;
 }
 
 .body_title {
@@ -95,6 +102,8 @@ body {
   font-size: 15px;
   font-weight: 700;
   color: #999999;
+
+  padding: 5px 0px;
 }
 
 .game_lotto {
@@ -105,7 +114,13 @@ body {
   border-radius: 8px;
   text-align: center;
   font-size: 14px;
+  font-weight: 700;
   font: Malgun Gothic;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 2px;
+  margin: 5px;
 }
 
 .lotto_btn {
@@ -116,4 +131,6 @@ body {
   border: 1px solid gray;
   border-radius: 5px;
   cursor: pointer;
+  background-color: #ffffff;
+  text-align: center;
 }
