--- a/myworld/music/musicbox.css
+++ b/myworld/music/musicbox.css
@@ -9,15 +9,63 @@ body {
 }
 
 .wrapper_music {
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .music_header {
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .music_contents_title {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .music_title {
+  font-size: 14px;
+  font-weight: 700;
+  color: #55b2d4;
 }
 
 .music_subtitle {
+  font-size: 9px;
+  padding-left: 10px;
+}
+
+.devideLine {
+  width: 100%;
+  border-top: 1px solid gray;
+}
+
+.album_contents {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.album {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.album_name {
+  padding-top: 12px;
+  font-size: 12px;
+  font-weight: 700;
+  color: #0f465e;
+}
+.album_singer {
+  font-size: 10px;
+  padding-top: 3px;
+  color: #999999;
 }
