--- a/myworld/music/musicbox.css
+++ b/myworld/music/musicbox.css
@@ -15,13 +15,12 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
 }
 .music_header {
   width: 100%;
-
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 
 .music_contents_title {
@@ -44,6 +43,7 @@ body {
 .devideLine {
   width: 100%;
   border-top: 1px solid gray;
+  margin: 10px 0px;
 }
 
 .album_contents {
@@ -58,14 +58,72 @@ body {
   align-items: center;
 }
 
+.album > img {
+  width: 120px;
+  height: 120px;
+}
+
 .album_name {
   padding-top: 12px;
   font-size: 12px;
   font-weight: 700;
   color: #0f465e;
 }
-.album_singer {
+.album_artist {
   font-size: 10px;
   padding-top: 3px;
   color: #999999;
+}
+
+.music_body {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.music_table {
+  width: 100%;
+  padding-top: 10px;
+  border-spacing: 0px;
+}
+
+.music_table th {
+  height: 20px;
+  font-size: 12px;
+  font-weight: 700;
+  color: gray;
+  background-color: #eeeeee;
+
+  padding-top: 2px;
+  border-top: 1px solid gray;
+  border-bottom: 1px solid gray;
+}
+
+.music_table td {
+  height: 20px;
+  font-size: 12px;
+  color: #0f465e;
+  font-weight: 400;
+  border-bottom: 1px dotted #999999;
+  padding-top: 2px;
+}
+
+.table_checkbox {
+  width: 5%;
+  text-align: center;
+}
+
+.in_table_number {
+  width: 10%;
+  text-align: center;
+}
+
+.in_table_songname {
+  width: 45%;
+  text-align: left;
+}
+
+.in_table_artist {
+  width: 30%;
+  text-align: center;
 }
