--- a/class/01-signup/signup.css
+++ b/class/01-signup/signup.css
@@ -15,7 +15,7 @@ body {
 }
 
 .signup_wrapper {
-  width: 670px;
+  width: 540px;
   height: 960px;
   border: 1px solid #aacdff;
   border-radius: 10px;
@@ -83,7 +83,7 @@ h2 {
 .signup_gender {
   width: 100%;
   height: 80px;
-  padding: 10px;
+
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -153,4 +153,9 @@ h2 {
 
 .return_btn:hover {
   background-color: #e7e7e7;
+}
+
+.empty_warning {
+  font-size: 12px;
+  color: red;
 }
